# gstreamer-vaapi

./: configure.ac  meson.build  meson_options.txt
docs/: meson.build
gst/vaapi/: meson.build
